--- a/app/globals.css
+++ b/app/globals.css
@@ -54,10 +54,16 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .navLink {
-  @apply flex items-center justify-center gap-1 text-customNeon px-4 py-2 hover:bg-customNeon hover:text-customGray transition-all rounded-md cursor-pointer;
+  @apply flex items-center justify-center gap-1 text-customNeon px-3 py-2 hover:bg-customNeon hover:text-customGray transition-all rounded-md cursor-pointer;
+}
+.navLinkActive {
+  @apply flex items-center justify-center gap-1 text-customGray bg-customNeon px-3 py-2 hover:bg-customNeon hover:text-customGray transition-all rounded-md cursor-pointer;
 }
 .navLink-sm {
-  @apply flex items-center justify-center gap-1 rounded-md text-customGray px-4 py-2 hover:scale-90 transition-all hover:bg-customGray hover:text-customNeon  cursor-pointer;
+  @apply flex items-center justify-center gap-1 rounded-md text-customGray px-3 py-2 hover:scale-90 transition-all hover:bg-customGray hover:text-customNeon  cursor-pointer;
+}
+.navLinkActive-sm {
+  @apply flex items-center justify-center gap-1 rounded-md text-customNeon bg-customGray px-3 py-2 hover:scale-90 transition-all hover:bg-customGray hover:text-customNeon  cursor-pointer;
 }
 .cpath {
   /* clip-path: polygon(100% 0, 100% 100%, 0 100%, 24% 0); */
